--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            text-align: center;
-            color: red;
-        }
-    </style>
+    <link ref="stylesheet" href="style.css" />
+    
 </head>
 <body>
     <h1>
         Hello Git
     </h1>
+    <script src="script.js"></script>
 </body>
 </html>
