Added html login form

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
-    <link ref="stylesheet" href="style.css" />
-    
+    <link ref="style.css" href="style.css" />
+
 </head>
 <body>
     <h1>
         Hello Git
     </h1>
+    <form>
+        <input type="email" palceholder="Enter your email" />
+        <input type="password" placeholder="Enter your password" />
+        <input type="submit" value="Login" />
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
