--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
-    <link ref="style.css" href="style.css" />
-
+    <link ref="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>
