--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Hub</title>
     <link ref="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>
-        Hello Git
+        Git Hub is awesome
     </h1>
     <form>
         <input type="email" palceholder="Enter your email" />
